# tiny-llm-from-scratch

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
client/: README.md  __init__.py  chat.py  web.html
data/: README.md  prepare.py  raw.txt  tokenizer.json
docs/: environment.md
docs/concepts/: checkpoint-and-generation.md  from-bigram-to-gpt.md  minimal-training-loop.md  tiny-gpt-training.md  training-data-to-samples.md
docs/learning-log/: day-001.md
export/: README.md  __init__.py  export_weights.py
infer/: README.md  __init__.py  kv_cache.py  numpy_engine.py  sampling.py
server/: README.md  __init__.py  app.py  backend.py
tests/: test_export_weights.py  test_kv_cache.py  test_numpy_inference.py  test_sampling.py  test_server.py
train/: README.md  bigram.py  sample_bigram.py  tiny_gpt.py
