[project]
name = "tiny-llm-from-scratch"
version = "0.1.0"
description = "From-scratch tiny LLM learning project: data, training, weights, inference engine, and OpenAI-style API."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "numpy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
train = [
    "torch>=2.5.0",
]
server = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[tool.uv]
default-groups = ["dev"]

